Correcting the error

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Six22</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/Six22/CSS/Six22.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./Six22.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     <div class="navbar">
         <div class="logo">
             <a href="">
-                <img src="/Six22/Assets/Images/six22rmv.png" alt="logo">
+                <img src="./six22rmv.png" alt="logo 0">
             </a>
             <a href=""><span class="logo-title">Six22</span></a>
         </div>
@@ -48,7 +48,7 @@
                     <button class="btn-home">Learn more</button>
                 </div>
                 <div class="col-lg-6 right">
-                    <img src="/Six22/Assets/Images/family.webp" alt="Family development" style="border-radius: 4px;">
+                    <img src="./family.webp" alt="Family development" style="border-radius: 4px;">
                 </div>
     </section>
 
